<resources>
    <string name="app_name">Noble</string>
    <string name="app_names">Noble Password Manager</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Noble Password Manager</string>
    <string name="nav_header_subtitle">info@barengific.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="dialog_fire_missiles">\"BARZ\"</string>
    <string name="fire">\"HAA FIRES\"</string>
    <string name="cancel">Cancel</string>
    <string name="MasterKey_phrase">Enter a Master Phrase Key</string>
    <string name="submit">Submit</string>
    <string name="generate">Generate</string>
    <string name="delete">Delete</string>
    <string name="copy">Copy</string>
    <string name="action_about">About</string>
    <string name="textField_password_derivation_key">Password Derivation Key</string>
    <string name="btnSave">Save</string>
    <string name="text_view_length">Length</string>
    <string name="text_view_copy_to_clipboard">Copy to clipboard</string>
    <string name="action_exit">Exit</string>

    <string-array name="p_len_array">
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
    </string-array>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Master Phrase</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="security_header">Security</string>
    <string name="digit_phrase">Digit Phrase</string>
    <string name="ask_for_lock">Biometric Lock</string>
    <string name="settings_header_backup">Backup</string>
    <string name="settings_header_restore">Restore</string>
    <string name="title_activity_login"></string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="preference_file_key_del">aaaaa_delete_this</string>
    <string name="saved_high_score_key_del">11</string>
    <string name="hide">Hide</string>
    <string name="show">Show</string>
    <string name="output_result">Output Result</string>
    <string name="enter_pin">Pin Number</string>
    <string name="settings_header_intro">Introduction</string>
    <string name="settings_header_tut">Tutorial</string>
    <string name="settings_header_rst">Reset Credentials</string>
    <string name="confirm">Confirm</string>
    <string name="action_donations">Donation</string>
    <string name="action_adfree">Ad Free Version</string>
    <string name="nested_view">Nested View</string>
    <string name="back_up">Back Up</string>
    <string name="select_all">Select All</string>
    <string name="select_none">Select None</string>
    <string name="restore">Restore</string>
    <string name="filename_hint">Filename.txt</string>
    <string name="pin_number">Pin Number</string>
    <string name="master_key">Password</string>
    <string name="btc_address">bc1qdhjt7q2qxdzuctxqhaa9awx3vm5rcmuweuf5qv</string>
    <string name="eth_address">0xB6a882D25a798a0FE623f231f34A3152587F11f8</string>
    <string name="bch_address">qzrcrtrnqn0mnxcddvpxxh3lywdda8h9mq0avq3xa0</string>
    <string name="ltc_address">ltc1q407s94mdyntqu2sjkpc7qe79mmzrl0j60nu492</string>
    <string name="etc_address">0x33cD286E37839aD67f10Af9b38b91B6339127D21</string>
    <string name="algo_address">WCU3QDLBILUMS73BOXZJSR2UC5LLZS2RZ4K53FUXN66JWPILGRSGP3F6AI</string>
    <string name="nano_address">nano_19izityh565c3psgjytgrt3ku69f94r7d74u8ts7gy6g9onri55ahyoq5mgf</string>
    <string name="nano">NANO</string>
    <string name="btc">BTC</string>
    <string name="eth">ETH</string>
    <string name="bch">BCH</string>
    <string name="ltc">LTC</string>
    <string name="etc">ETC</string>
    <string name="algo">ALGO</string>
    <string name="settings_header_help">Help</string>
    <string name="app_name_short">Noble</string>
    <string name="settings_header_help_coming">Help (Coming soon...)</string>
    <string name="nonon">nonon</string>
    <string name="length">Length</string>
    <string name="rst_confirm">Are you sure you want to reset your credentials? All your saved passwords will be deleted!</string>

</resources>