<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tvBTC"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textIsSelectable="false"
        android:textSize="20sp"
        android:textStyle="normal|bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.01"
        app:startIconDrawable="@drawable/ic_baseline_content_copy_24"
        tools:ignore="MissingClass,SpeakableTextPresentCheck">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:editable="false"
            android:hint="@string/btc"
            android:text="@string/btc_address"
            tools:ignore="SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tvETH"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textIsSelectable="false"
        android:textSize="20sp"
        android:textStyle="normal|bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvBTC"
        app:layout_constraintVertical_bias="0.01"
        app:startIconDrawable="@drawable/ic_baseline_content_copy_24"
        tools:ignore="MissingClass,SpeakableTextPresentCheck">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:editable="false"
            android:hint="@string/eth"
            android:text="@string/eth_address"
            tools:ignore="SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tvBCH"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textIsSelectable="false"
        android:textSize="20sp"
        android:textStyle="normal|bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvETH"
        app:layout_constraintVertical_bias="0.01"
        app:startIconDrawable="@drawable/ic_baseline_content_copy_24"
        tools:ignore="MissingClass,SpeakableTextPresentCheck">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:editable="false"
            android:hint="@string/bch"
            android:text="@string/bch_address"
            tools:ignore="SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tvLTC"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textIsSelectable="false"
        android:textSize="20sp"
        android:textStyle="normal|bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvBCH"
        app:layout_constraintVertical_bias="0.01"
        app:startIconDrawable="@drawable/ic_baseline_content_copy_24"
        tools:ignore="MissingClass,SpeakableTextPresentCheck">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:editable="false"
            android:hint="@string/ltc"
            android:text="@string/ltc_address"
            tools:ignore="SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tvETC"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textIsSelectable="false"
        android:textSize="20sp"
        android:textStyle="normal|bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLTC"
        app:layout_constraintVertical_bias="0.01"
        app:startIconDrawable="@drawable/ic_baseline_content_copy_24"
        tools:ignore="MissingClass,SpeakableTextPresentCheck">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:editable="false"
            android:hint="@string/etc"
            android:text="@string/etc_address"
            tools:ignore="SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tvAlgo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textIsSelectable="false"
        android:textSize="20sp"
        android:textStyle="normal|bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvETC"
        app:layout_constraintVertical_bias="0.01"
        app:startIconDrawable="@drawable/ic_baseline_content_copy_24"
        tools:ignore="MissingClass,SpeakableTextPresentCheck">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:editable="false"
            android:hint="@string/algo"
            android:text="@string/algo_address"
            tools:ignore="SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tvNano"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/nano"
        android:textIsSelectable="false"
        android:textSize="20sp"
        android:textStyle="normal|bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAlgo"
        app:layout_constraintVertical_bias="0.01"
        app:startIconDrawable="@drawable/ic_baseline_content_copy_24"
        tools:ignore="MissingClass,SpeakableTextPresentCheck">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:editable="false"
            android:hint="@string/nano"
            android:text="@string/nano_address"
            tools:ignore="SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnCancels"
        android:layout_width="0dp"
        android:layout_height="57dp"
        android:backgroundTint="#266D9F"
        android:text="@string/cancel"
        android:textSize="20sp"
        app:icon="@drawable/ic_baseline_cancel_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNano"
        app:layout_constraintVertical_bias="0.1" />

</androidx.constraintlayout.widget.ConstraintLayout>