<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollViewInitialCompanySelection"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/nested_view"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="-16dp">

            <Button
                android:id="@+id/btnCancelb"
                android:layout_width="0dp"
                android:layout_height="57dp"
                android:text="@string/cancel"
                android:textSize="20sp"
                android:backgroundTint="#266D9F"
                app:icon="@drawable/ic_baseline_cancel_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.05" />

            <Button
                android:id="@+id/btnBackups"
                android:layout_width="0dp"
                android:layout_height="57dp"
                android:text="@string/back_up"
                android:textSize="20sp"
                app:icon="@drawable/ic_baseline_save_alt_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnCancelb"
                app:layout_constraintVertical_bias="0.05" />

            <Button
                android:id="@+id/btnSelectAll"
                android:layout_width="190dp"
                android:layout_height="57dp"
                android:text="@string/select_all"
                android:textSize="16sp"
                app:icon="@drawable/ic_baseline_select_all_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnBackups"
                app:layout_constraintVertical_bias="0.02" />

            <Button
                android:id="@+id/btnRestore"
                android:layout_width="190dp"
                android:layout_height="57dp"
                android:text="@string/select_none"
                android:textSize="16sp"
                
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnBackups"
                app:layout_constraintVertical_bias="0.02" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnSelectAll"
                app:layout_constraintVertical_bias="2.0" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>