<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tvMasterKeyv"
        android:layout_width="0dp"
        android:layout_height="57dp"
        android:hint="@string/master_key"
        android:textSize="20sp"
        android:textStyle="normal|bold"
        app:endIconMode="password_toggle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1"
        app:startIconContentDescription="AAAA"
        app:startIconDrawable="@drawable/ic_baseline_insert_drive_file_24">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:editable="false"
            tools:ignore="TextContrastCheck,TextContrastCheck" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tvDigitv"
        android:layout_width="0dp"
        android:layout_height="57dp"
        android:hint="@string/pin_number"
        android:textIsSelectable="false"
        android:textSize="20sp"
        android:textStyle="normal|bold"
        app:endIconMode="password_toggle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMv"
        app:layout_constraintVertical_bias="0.02"
        app:startIconDrawable="@drawable/ic_baseline_content_copy_24"
        tools:ignore="MissingClass,SpeakableTextPresentCheck">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:editable="false"
            tools:ignore="SpeakableTextPresentCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnCancels"
        android:layout_width="0dp"
        android:layout_height="57dp"
        android:backgroundTint="#266D9F"
        android:text="@string/cancel"
        android:textSize="20sp"
        app:icon="@drawable/ic_baseline_cancel_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDigitv"
        app:layout_constraintVertical_bias="0.05" />

</androidx.constraintlayout.widget.ConstraintLayout>